@startuml

title __SETTINGS's Class Diagram__\n

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      namespace settings {
        class com.gmail.ib.projectCrypt.ui.settings.Settings {
            + Settings()
        }
      }
    }
  }
  

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      namespace settings {
        class com.gmail.ib.projectCrypt.ui.settings.personalInformation {
            - birthdate : LocalDate
            - email : String
            - lastname : String
            - name : String
            + getBirthdate()
            + getEmail()
            + getLastname()
            + getName()
            + setBirthdate()
            + setEmail()
            + setLastname()
            + setName()
        }
      }
    }
  }
  

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      namespace settings {
        class com.gmail.ib.projectCrypt.ui.settings.settingsMenu {
            + settingsMenu()
            - deleteUser()
            - logout()
        }
      }
    }
  }
  

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      namespace settings {
        class com.gmail.ib.projectCrypt.ui.settings.subscriptionInfo {
            + subscriptionInfo()
        }
      }
    }
  }
  

  com.gmail.ib.projectCrypt.ui.settings.Settings -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.gmail.ib.projectCrypt.ui.settings.settingsMenu -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.gmail.ib.projectCrypt.ui.settings.subscriptionInfo -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
